@@ -92,15 +92,15 @@
 <tr class="rows">
 	<td class="col1" title="{table_donor_tip_data_text}">{crs}</td>
 	<td class="col2" title="{table_donor_tip_donor_text}" onclick="return ctrack.url('#view=donor_activities&funder={funder}');">
-		<a href="#view=donor_activities&funder={funder}">{donor}</a></td>
+		<a>{donor}</a></td>
 	<td class="col3" title="{table_donor_tip_t1_text}" onclick="return ctrack.url('#view=donor_transactions&year={year1}&funder={funder}');">
-		<a href="#view=donor_transactions&year={year1}&funder={funder}">{t1}</a></td>
+		<a>{t1}</a></td>
 	<td class="col4" title="{table_donor_tip_t2_text}" onclick="return ctrack.url('#view=donor_transactions&year={year2}&funder={funder}');">
-		<a href="#view=donor_transactions&year={year2}&funder={funder}">{t2}</a></td>
+		<a>{t2}</a></td>
 	<td class="col5" title="{table_donor_tip_t3_text}" onclick="return ctrack.url('#view=donor_transactions&year={year3}&funder={funder}');">
-		<a href="#view=donor_transactions&year={year3}&funder={funder}">{t3}</a></td>
+		<a>{t3}</a></td>
 	<td class="col6" title="{table_donor_tip_b1_text}" onclick="return ctrack.url('#view=donor_budgets&year={year3}&funder={funder}');">
-		<a href="#view=donor_budgets&year={year3}&funder={funder}">{b1}</a></td>
+		<a>{b1}</a></td>
 	<td class="col7" title="{table_donor_tip_b2_text}" onclick="return ctrack.url('#view=donor_budgets&year={year4}&funder={funder}');">
-		<a href="#view=donor_budgets&year={year4}&funder={funder}">{b2}</a></td>
+		<a>{b2}</a></td>
 </tr>
