@@ -262,7 +262,7 @@ a.mail:hover		{color:#74B5FF;}
 a.logo				{display:inline-block; vertical-align:bottom; width:250px;}
 a.toggle			{display:inline-block; vertical-align:middle; margin-left:20px; font-size:0.9em; color:#FFF; padding:6px 10px; background-color:#2573CD; border-radius:4px;}
 a.toggle:hover		{background-color:#428DE3;}
- #generator_aid_div span.txt, #generator_limit_div span.txt	, #generator_maxheight_div span.txt	{display:inline-block; vertical-align:middle; font-size:0.9em; color:#ccc; width:575px;
+ #generator_aid_div span.txt, #generator_limit_div span.txt, #generator_maxheight_div span.txt	{display:inline-block; vertical-align:middle; font-size:0.9em; color:#ccc; width:520px;
 margin-left:10px; line-height:1.5em;}
 
 span.overtxt		{display:none;}
