@@ -6,7 +6,7 @@ Adding country budgets to d-portal
 
 We have made a small change to what information is shown in publisher tables in d-portal – the ones where you are looking from an individual publisher’s perspective at recipient countries – by including organisation file budgets.  This is budget data which some publishers provide in their IATI organisation file (<i>as opposed to activity files, where most other IATI data is reported</i>) and it represents the total annual budget for that publisher, per recipient country.
 
-So instead of seeing the 2015 and 2016 activity file budget columns in tables such as <a href="http://d-portal.org/ctrack.html?publisher=GB-1&tongue=eng">this</a>, you can now see and compare the budgets related to existing activities (<i>from the activity files – the column which we have called ‘allocated’</i>) and the budget information in general for that country (<i>the column which we have called ‘total’</i>).
+So instead of seeing the 2015 and 2016 activity file budget columns in tables such as <a href="http://d-portal.org/ctrack.html?publisher=GB-1">this</a>, you can now see and compare the budgets related to existing activities (<i>from the activity files – the column which we have called ‘allocated’</i>) and the budget information in general for that country (<i>the column which we have called ‘total’</i>).
 
 <b>Note</b> - you can still scroll through past/future years using the arrows at the top of the table.
 
