@@ -4,6 +4,9 @@ Added new data quality alert for no active projects
 Translations added for alert
 Added footnote info for Donors table about CRS agencies
 Added translations for footnote info
+Fixed double tab Generator bug for Firefox
+Fixed layout bug for SAVi option in Generator
+Edited link for news post
 
 
 Development Portal (2015-11-13 shi)
